limpei um pouco o codigo e melhorei o layout

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Recursive&family=Righteous&display=swap" href="http://fonts.cdnfonts.com/css/lexend-deca" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/lexend-deca" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css" href="css/style.css" />
     <title>React App</title>
   </head>
