--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="http://fonts.cdnfonts.com/css/lexend-deca" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/lexend-deca" rel="preconnect" crossorigin >
     <link rel="stylesheet" href="css/reset.css" href="css/style.css" />
     <title>React App</title>
   </head>
